--- a/an-zxing/src/main/res/layout/base_item_zxing_title.xml
+++ b/an-zxing/src/main/res/layout/base_item_zxing_title.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingTop="25dp">
 
     <Button
         android:id="@+id/button_back"
         android:layout_width="75.0dip"
         android:layout_height="48dp"
         android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
         android:background="@android:color/transparent"
         android:text="返回"
-        android:textColor="@android:color/white" />
+        android:textColor="@color/yy_color_selector_txt" />
 
     <TextView
         android:id="@+id/textview_title"
@@ -28,14 +30,15 @@
         android:layout_width="50dp"
         android:layout_height="48dp"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true">
 
         <ImageButton
             android:id="@+id/button_function"
             android:layout_width="30dp"
             android:layout_height="28dp"
             android:layout_gravity="center"
-            android:background="@drawable/aar_mm_title_btn_menu_normal"
+            android:background="@drawable/base_zxing_right"
             android:minWidth="70dip" />
     </LinearLayout>
 </RelativeLayout>
