--- a/app/src/main/res/layout/sst_activity_personalui.xml
+++ b/app/src/main/res/layout/sst_activity_personalui.xml
@@ -36,7 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="闪光灯"
+                android:text="你给的光亮"
                 android:textColor="#FFFFFF" />
         </LinearLayout>
 
@@ -100,9 +100,7 @@
                 android:layout_marginTop="10dp"
                 android:text="我们"
                 android:textColor="#FFFFFF" />
-
         </LinearLayout>
-
     </LinearLayout>
 
 </FrameLayout>
