ytips:完善所有功能。 1。支持连续扫描二维码或者条码， 2。支持选择系统的相册对二维码或条码图片进行解析， 3。支持非二维码或条码图片的容错处理， 4。源码中提供了对类似QQ，微信二维码有log的扫描， 5。支持自定义扫描二维码的界面， 6。支持创建二维码， 7。提供了像当前类似流行的单车扫码声音，灯光的CodeUtils工具类， 8。支持控制显示二维码扫描界面右边按钮是否显示的控制。

--- a/an-zxing/src/main/res/layout/base_item_zxing_title.xml
+++ b/an-zxing/src/main/res/layout/base_item_zxing_title.xml
@@ -37,6 +37,7 @@
             android:id="@+id/button_function"
             android:layout_width="30dp"
             android:layout_height="28dp"
+            android:visibility="invisible"
             android:layout_gravity="center"
             android:background="@drawable/base_zxing_right"
             android:minWidth="70dip" />
